# InvestCalc

./: CMakeLists.txt
app/: .gitignore  package.json  pnpm-lock.yaml  rollup.config.js  tailwind.config.js
app/public/: index.html
app/src/: App.svelte  Charts.svelte  Index.svelte
desktop-ultralight/cmake/: App.cmake
desktop-ultralight/src/: MyApp.cpp  MyApp.h
src/: App.cpp
src/controller/: CalcController.hpp  MyController.hpp
src/dto/: CalcDTO.hpp  DTOs.hpp
